@@ -4,6 +4,10 @@
 	labels should override auto-generated tick labels in 3D plots just as
 	they already do in 2D plots.
 
+	* src/plot2d.c: In `plot with labels`, skip labels for which the x,y
+	coordinates are UNDEFINED.
+	Bug #3415454
+
 2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
